--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -16,7 +16,7 @@
 
       <nav class="nav">
         <ul class="menu-nav">
-          <li class="menu-nav__item active">
+          <li class="menu-nav__item">
             <a href="index.html" class="menu-nav__link"> Home </a>
           </li>
           <li class="menu-nav__item">
@@ -25,7 +25,7 @@
           <li class="menu-nav__item">
             <a href="projects.html" class="menu-nav__link"> My Projects </a>
           </li>
-          <li class="menu-nav__item">
+          <li class="menu-nav__item active">
             <a href="contact.html" class="menu-nav__link"> Contact Me </a>
           </li>
         </ul>
@@ -33,12 +33,22 @@
     </header>
 
     <main>
-      <section class="home">
-        <h2>Hi! My Name Is</h2>
-        <h1 class="home__name">
-          Mike <span class="home__name--last">Smith</span>
-        </h1>
-        <h2>Web Developer, Designer & Programmer</h2>
+      <section class="contact">
+        <h2>Contact Me</h2>
+        <div class="contact__list">
+          <div class="contact__email">
+            <i class="fas fa-envelope">Email</i>
+            <div class="text-secondary">email@email.com</div>
+          </div>
+          <div class="contact__phone">
+            <i class="fas fa-mobile-alt">Phone</i>
+            <div class="text-secondary">+84 123 456 789</div>
+          </div>
+          <div class="contact__address">
+            <i class="fas fa-marker-alt">Address</i>
+            <div class="text-secondary">123 First St. Mouston, TX</div>
+          </div>
+        </div>
 
         <div class="social-icons">
           <a href="#!">
